--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 *.tar.gz
 *.rar
 
+node_modules
+lib/database/sessions/*.json
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
