--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,12 @@
 *.tar.gz
 *.rar
 
+node_modules
+.temp
+lib/database/sessions/*.json
+lib/database/store.json
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 u.sh
-
